# fastAPI_python

./: .coverage  pyproject.toml
src/fast_zero/: app.py
tests/: test_app.py
