[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "NatanMaia-ops",email = "natanmaia2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = '-p no:warnings'
testpaths = ["tests"]

[tool.taskipy.tasks]
run = 'fastapi dev src\fast_zero\app.py'
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
post_test = 'coverage html'
lint = 'ruff check && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
